--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview",
-    "json-server": "json-server --watch src/database/db.json --host 127.0.0.1 --port 3002"
+    "json-server": "json-server"
   },
   "dependencies": {
     "@emotion/react": "^11.10.5",
@@ -16,14 +16,9 @@
     "@mui/icons-material": "^5.11.0",
     "@mui/material": "^5.11.8",
     "axios": "^1.3.2",
-    "firebase": "^9.17.1",
     "framer-motion": "^9.0.4",
     "json-server": "^0.17.1",
-    "mui-datatables": "^4.3.0",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-router-dom": "^6.8.0",
-    "reactfire": "^4.2.2"
+    "react": "^18.2.0"
   },
   "devDependencies": {
     "@types/react": "^18.0.27",
